--- a/faverton-nuxt3/package.json
+++ b/faverton-nuxt3/package.json
@@ -13,26 +13,32 @@
   },
   "dependencies": {
     "@hebilicious/vue-query-nuxt": "^0.3.0",
-    "@nuxt/eslint": "0.7.5",
-    "@nuxt/ui": "^2.18.3",
+    "@nuxt/ui": "^2.21.0",
     "@nuxtjs/leaflet": "^1.2.6",
-    "@nuxtjs/supabase": "^1.4.0",
-    "@tanstack/vue-query": "^5.64.1",
+    "@nuxtjs/supabase": "^1.4.6",
+    "@tanstack/vue-query": "^5.64.2",
     "@tresjs/cientos": "^3.9.0",
-    "@tresjs/nuxt": "^3.0.2",
+    "@tresjs/nuxt": "^3.0.7",
     "@tresjs/post-processing": "^0.7.1",
-    "eslint": "^8.57.0 || ^9.0.0",
-    "gsap": "^3.12.5",
-    "nuxt": "^3.12.4",
+    "chart.js": "^4.4.7",
+    "gsap": "^3.12.7",
+    "nuxt": "^3.15.2",
     "vue": "latest",
+    "vue-chartjs": "^5.3.2",
     "vuetify-nuxt-module": "0.18.3"
   },
   "packageManager": "pnpm@9.5.0+sha1.8c155dc114e1689d18937974f6571e0ceee66f1d",
   "devDependencies": {
-    "@types/three": "^0.167.1",
+    "@nuxt/eslint": "0.7.5",
+    "@types/three": "^0.167.2",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "happy-dom": "^14.12.3",
+    "prettier": "^3.4.2",
     "three": "^0.167.1",
-    "unplugin-auto-import": "^0.18.2",
-    "vitest": "^2.0.5"
+    "typescript": "^5.7.3",
+    "unplugin-auto-import": "^0.18.6",
+    "vitest": "^2.1.8"
   }
 }
