--- a/faverton-nuxt3/package.json
+++ b/faverton-nuxt3/package.json
@@ -9,7 +9,17 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:unit": "vitest run app/",
+    "test:integration": "vitest run app/",
+    "test:e2e": "playwright test",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "exec playwright show-report",
+    "test:e2e:clean": "rm -rf test-results playwright-report blob-report",
+    "test:e2e:clean-git": "git rm --cached -r playwright-report/ test-results/ 2>/dev/null || true",
+    "test:all": "pnpm test:unit && pnpm test:integration && pnpm test:e2e"
   },
   "dependencies": {
     "@nuxt/ui": "^2.21.1",
@@ -33,17 +43,21 @@
   "packageManager": "pnpm@9.5.0+sha1.8c155dc114e1689d18937974f6571e0ceee66f1d",
   "devDependencies": {
     "@nuxt/eslint": "1.2.0",
+    "@nuxt/test-utils": "^3.19.1",
+    "@playwright/test": "^1.52.0",
     "@types/leaflet": "^1.9.17",
     "@types/leaflet-draw": "^1.0.11",
     "@types/three": "^0.167.2",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "happy-dom": "^17.4.4",
+    "happy-dom": "^17.4.7",
+    "playwright-core": "^1.52.0",
     "prettier": "^3.5.3",
     "three": "^0.167.1",
     "typescript": "^5.8.2",
     "unplugin-auto-import": "^0.18.6",
-    "vitest": "^3.0.9"
+    "vitest": "^3.1.4"
   }
 }
